# mandelbrot

./: .gitignore  Makefile.am  Makefile.in  autogen.sh  common.h  configure  configure.ac  main.cpp  mainifs.points.cpp  mainmandelbrot.cpp  mainmandelbrot.h
